<resources>
    <string name="app_name">FirstHomeworkMHS</string>
    <string name="first_header">Навыки</string>
    <string name="github">Github</string>
    <string name="grad">10 класс</string>
    <string name="nick">Федор Тельнов</string>
    <string name="project_idea_header">Идея проекта</string>
    <string name="project_idea_text">Уже отписали в лс, а т.к. СЕКУРИТИ АЛЕРТ, то тут ничего писать не буду. Ха. Победа за мной.</string>
    <string name="ava_desc">Аватарка</string>
    <string name="myself_header">Обо мне</string>
    <string name="myself_info">Люблю кодить. Ну реально люблю. Занимаюсь кодингом практически все свободное время. Иногда обучаю азам фронтенда/бэкэнда близких друзей, но пока не очень получается. Андроид это, конечно, хорошо, но есть еще и вэб, который меня тоже приводит в восхищение. Иногда игрушки пишу, ну так, простенькие. Учился во многих комп. школах, но это не важно, думается мне.</string>
    <string name="filter_description">Это изображение фильтра. Что не понятно?</string>
    <string name="filter_header">Фильтр</string>
    <string name="accept">Применить</string>
    <string name="close_desc">Закрыть</string>
    <string name="all_selected">Все</string>
</resources>